--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 		<jstl.version>1.2</jstl.version>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
+		<mysql.version>8.0.13</mysql.version>
 	</properties>
 
 	<dependencies>
@@ -82,6 +83,12 @@
 			<version>2.4.2</version>
 		</dependency>
 
+		<!-- mysql -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>${mysql.version}</version>
+		</dependency>
 	</dependencies>
 
 	<build>
