--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,13 @@
 			<artifactId>spring-aspects</artifactId>
 			<version>${springframework.version}</version>
 		</dependency>
+
+		<!-- spring secuirty taglibs -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-taglibs</artifactId>
+			<version>${springsecurity.version}</version>
+		</dependency>
 	</dependencies>
 
 	<build>
